--- a/nuxt/blog/package.json
+++ b/nuxt/blog/package.json
@@ -13,7 +13,9 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "nuxt-dropzone": "^1.0.4",
     "vue-meta": "^2.4.0",
+    "vue-product-zoomer": "^3.0.1",
     "vuetify": "^2.5.5",
     "vuex-persistedstate": "^4.1.0"
   },
