--- a/blog/composer.json
+++ b/blog/composer.json
@@ -9,9 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-gd": "*",
+        "cloudinary-labs/cloudinary-laravel": "^1.0",
+        "doctrine/dbal": "^3.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.7",
+        "jrm2k6/cloudder": "0.6.0",
         "laravel/framework": "^7.0",
         "laravel/passport": "~9.0",
         "laravel/tinker": "^2.0",
@@ -61,6 +66,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "post-install-cmd": [ "ln -sr storage/app/public public/storage" ]
     }
 }
