--- a/nuxt/blog/package.json
+++ b/nuxt/blog/package.json
@@ -6,6 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "heroku-postbuild": " npm run build",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -20,6 +21,10 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.1"
+    "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/vuetify": "^1.12.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^10.1.1",
+    "webpack": "^4.46.0"
   }
 }
